--- a/TipCalc/app/src/main/res/layout/fragment_tip_history_list.xml
+++ b/TipCalc/app/src/main/res/layout/fragment_tip_history_list.xml
@@ -2,13 +2,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.TipHistoryListFragment">
+    tools:context="com.mralex6204.android.tipcalc.fragments.TipHistoryListFragment">
 
-<android.support.v7.widget.RecyclerView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/recyclerView"
-    />
-
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </FrameLayout>
