--- a/TipCalc/app/src/main/res/layout/activity_tip_detail.xml
+++ b/TipCalc/app/src/main/res/layout/activity_tip_detail.xml
@@ -3,13 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context="com.mralex6204.android.tipcalc.activities.TipDetailActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:theme="@style/DetailTheme"
+        android:popupTheme="@style/DetailTheme"
+        android:elevation="4dp"
+        />
 
     <TextView
         android:layout_width="wrap_content"
