--- a/TipCalc/app/src/main/res/layout/item_row.xml
+++ b/TipCalc/app/src/main/res/layout/item_row.xml
@@ -2,13 +2,25 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    >
         <TextView
             android:id="@+id/txtContent"
             android:gravity="center"
-            android:padding="@dimen/activity_horizontal_margin"
-            android:text="Large"
+            android:text="Content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <!--
+                Agregamos este txtTimeStamp TexView al Item row
+                para poder poner la fecha al momento de agregar la propina.
+        -->
+        <TextView
+            android:id="@+id/txtTimeStamp"
+            android:gravity="center"
+            android:text="TimeStamp"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 </LinearLayout>
