--- a/TipCalc/app/src/main/res/layout/item_row.xml
+++ b/TipCalc/app/src/main/res/layout/item_row.xml
@@ -2,13 +2,23 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:gravity="center"
+    >
         <TextView
             android:id="@+id/txtContent"
             android:gravity="center"
-            android:padding="@dimen/activity_horizontal_margin"
+
             android:text="Large"
             android:textAppearance="?android:attr/textAppearanceLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/txtTimeStamp"
+            android:gravity="center"
+            android:text="Large"
+            android:textAppearance="?android:attr/textAppearanceSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 </LinearLayout>
