--- a/TipCalc/app/src/main/res/values/styles.xml
+++ b/TipCalc/app/src/main/res/values/styles.xml
@@ -3,9 +3,14 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <!--<item name="colorPrimary">@color/colorPrimary</item>-->
+        <!--<item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
+        <!--<item name="colorAccent">@color/colorAccent</item>-->
+
+        <!--Sobre escribimos nuestro estilo de colores -->
+        <item name="colorPrimary">#550000</item>
+        <item name="colorPrimaryDark">#801515</item>
+        <item name="colorAccent">#D46A6A</item>
     </style>
 
 </resources>
